adding complete C3 export

--- a/viz/c3-0.2.0/htdocs/samples/data_url.html
+++ b/viz/c3-0.2.0/htdocs/samples/data_url.html
@@ -13,15 +13,7 @@
       var chart1 = c3.generate({
         bindto: '#chart1',
         data: {
-          url: '/data/c3_test.csv'
-        }
-      });
-
-      var chart2 = c3.generate({
-        bindto: '#chart2',
-        data: {
-          url: '/data/c3_test.json',
-          mimeType: 'json'
+          url: '/data/inscritos_dia.csv'
         }
       });
 
