--- a/viz/c3-0.2.0/htdocs/samples/timeseries.html
+++ b/viz/c3-0.2.0/htdocs/samples/timeseries.html
@@ -11,7 +11,7 @@
       var chart = c3.generate({
         bindto: '#chart',
         data: {
-          x : 'date',
+          x : 'Dia',
           x_format : '%Y%m%d',
           columns: [
 //            ['x', '2013-01-01', '2013-01-02', '2013-01-03', '2013-01-04', '2013-01-05', '2013-01-06'],
