--- a/viz/c3-0.2.0/htdocs/samples/data_json.html
+++ b/viz/c3-0.2.0/htdocs/samples/data_json.html
@@ -14,9 +14,9 @@
         bindto: '#chart1',
         data: {
           json: {
-            data1: [30, 20, 50, 40, 60, 50],
-            data2: [200, 130, 90, 240, 130, 220],
-            data3: [300, 200, 160, 400, 250, 250]
+            Dia:["2012-01-01\",\"2012-02-01\",\"2012-03-01\",\"2012-04-01\",\"2012-05-01\",\"2012-06-01\",\"2012-07-01\",\"2012-08-01\",\"2012-09-01\",\"2012-10-01\",\"2012-11-01\",\"2013-01-01\",\"2013-02-01\",\"2013-03-01\",\"2013-04-01\",\"2013-05-01\",\"2013-06-01\",\"2013-07-01\",\"2013-08-01\",\"2013-09-01\",\"2013-10-01\",\"2013-11-01\",\"2013-12-01\",\"2013-12-13\",\"2014-01-01\",\"2014-02-01\",\"2014-03-01\",\"2014-04-01\"],
+            Quantidade:[1,1,5,9,3,3,2,11,10,11,4,1,10,12,82,76,27,28,62,57,38,30,12,1,59,41,49,43]
+
           }
         }
       });
